Add toggle end-point for tutee's favourites
